<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    tools:context=".rules.RulesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:text="@string/how_to_play"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/game_rules_content"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="serif-monospace"
            android:text="@string/scoring"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/scoring_content"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="serif-monospace"
            android:text="@string/valid_sets"
            android:textSize="30dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77">

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="0" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="1" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="2" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="3" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="4" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="5" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="6" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="7" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/vs9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:tag="8" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="serif-monospace"
            android:text="@string/invalid_sets"
            android:textSize="30dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77">

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="(Two of the cards are blue)"
            android:textSize="20dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77">

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="(Two of the cards are striped)"
            android:textSize="20dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77">

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />

            <com.ericwei.sets.model.ShapeView
                android:id="@+id/ivs9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="(Two of the cards are squares)"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>